# beat-transformer-online-stem-gen

./: pyproject.toml
src/beat_transformer/: DilatedTransformer.py  eight_fold_test.py  train.py  visualize_attention.py
src/beat_transformer/ablation_models/: non_demix_model.py  tcn.py  tcn_demix_model.py
