[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat_transformer"
version = "0.1.0"
description = "Beat Transformer: Demixed Beat and Downbeat Tracking with Dilated Self-Attention"
authors = [
    { name = "Jingwei Zhao", email = "jzhao@u.nus.edu" },
    { name = "Gus Xia" },
    { name = "Ye Wang" },
]
license = { text = "MIT" }
requires-python = ">=3.6"
readme = ""
dependencies = [
    "librosa==0.11.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "madmom @ git+https://github.com/CPJKU/madmom.git@27f032e"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]